<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="arrow_icon">arrow icon</string>
    
    
    <string name="app_name">PriceGuessr</string>
    <string name="default_text">Default</string>
    <string name="default_product_name">Default product name</string>
    <string name="default_product_description">Default product descriptions but if we want we can make a longer text to be more consistent, but if we want we can make a longer text to be more consistent, but if we want we can make a longer text to be more consistent, end of text</string>
    <string name="default_product_price">00.00</string>
    <string name="default_product_currency">€</string>

    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_history">Historique</string>
    <string name="bottom_nav_profile">Profil</string>


    <!-- Game page -->
    <string name="game_page_title">Produit</string>
    <string name="game_page_question"> Quel est le prix de cet objet ?</string>
    <string name="game_page_btn_previous"><![CDATA[<]]></string>
    <string name="game_page_btn_next"><![CDATA[>]]></string>


    <!-- History page -->
    <string name="hisory_page_title">Historique</string>


    <!-- Profil page -->
    <string name="profil_page_title">Mon Profile</string>
    <string name="profil_page_section_personnal_info">Informations Personnelles</string>
    <string name="profil_page_section_password">Mot de passe</string>
    <string name="profil_page_login">Login</string>
    <string name="profil_page_name">Name</string>
    <string name="profil_page_logout">Déconnecter</string>
    <string name="profil_page_dialog_question_delete_account">Êtes vous sûr de supprimer votre compte, cette action ne sera pas réversible</string>


    <!-- Form -->
    <string name="form_label_login">Login</string>
    <string name="form_label_password">Mot de passe</string>
    <string name="form_register">S\'inscrire</string>
    <string name="form_login">Se connecter</string>
    <string name="form_forget_password">Mot de passe oublié</string>
    <string name="form_confirm_password">Confirmer votre mot de passe</string>
    <string name="form_already_account">Vous avez déjà un compte ?</string>
    <string name="form_no_account">Vous n\'avez pas encore de compte ?</string>
    <string name="form_modify_password_title">Modifier votre mot de passe</string>
    <string name="form_enter_modify_password">Entrer votre nouveau mot de passe :</string>





    <!-- Button -->
    <string name="btn_login">Se connecter</string>
    <string name="btn_register">S\'inscrire</string>
    <string name="btn_valider">Valider</string>
    <string name="btn_annuler">Annuler</string>
    <string name="btn_suivant">Suivant</string>
    <string name="btn_modify_info">Modifier mes informations</string>
    <string name="btn_modify_password">Modifier mon mot de passe</string>
    <string name="btn_retour">Retour</string>
    <string name="btn_delete_account">Supprimer mon compte</string>
    <string name="btn_availability">Disponibilités</string>




    <!-- Toast -->
    <string name="toast_input_page_invalid">Veuillez renseigner un login et mot de passe</string>
    <string name="toast_unknown_error">Erreur inconnue</string>
    <string name="toast_invalid_credentials">Identifiants invalide</string>
    <string name="toast_password_confirm_invalid">Les mots de passe ne sont pas les mêmes</string>
    <string name="toast_register_sucess">Inscription réussie, veuillez vous connecter</string>
    <string name="toast_game_page_empty_price">Veuillez renseigner le prix du produit</string>
    <string name="toast_user_already_exists">Ce login est déjà pris.</string>
    <string name="toast_decode_invalid">Erreur lors de la récupération des données</string>
    <string name="toast_enter_password">Veuillez entrer votre mot passe</string>
    <string name="api_connection_error">Un problème de connexion est survenu.</string>
    <string name="toast_no_data_available">Aucune donnée n\'est disponible pour le moment.</string>

    
    <!-- Dialog -->
    <string name="game_page_dialog_btn_next">Suivant</string>
    <string name="game_page_dialog_title_wrong_answer">Presque !</string>
    <string name="game_page_dialog_title_good_answer">Bravo !</string>
    <string name="game_page_dialog_desc_good_price_answer">Tu as trouvé le bon prix</string>
    <string name="game_page_dialog_desc_price_is_higher">Le prix est plus haut</string>
    <string name="game_page_dialog_desc_price_is_lower">Le prix est plus bas</string>
    <string name="game_page_dialog_desc_guess_remaining">Il te reste {X} chances.</string>
    <string name="product_detail_page_dialog_shop_title">Liste des magasins ayant ce produit en stock</string>


    <!-- Shop Item -->
    <string name="item_shop_stock">{X} produits restants</string>
    


</resources>