<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="300dp">


        <Button
            android:id="@+id/game_page_dialog_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_page"
            android:text="@string/game_page_dialog_btn_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/game_page_dialog_text_answer_is_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_page"
            android:text="@string/game_page_dialog_title_wrong_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/game_page_dialog_text_price_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_page_dialog_desc_price_is_higher"
            app:layout_constraintBottom_toBottomOf="@+id/game_page_dialog_number_guess_remaining"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_page_dialog_text_answer_is_correct"
            app:layout_constraintVertical_bias="0.363" />


        <TextView
            android:id="@+id/game_page_dialog_guess_remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_page_dialog_desc_guess_remaining"
            app:layout_constraintBottom_toTopOf="@+id/game_page_dialog_btn_ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_page_dialog_text_answer_is_correct" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>