<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailsActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/detail_product_page_product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/default_img" />

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/detail_product_page_product_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/default_product_name"
        android:layout_marginTop="@dimen/margin_page"
        android:layout_marginStart="@dimen/margin_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/detail_product_page_product_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_page"
        android:layout_marginEnd="@dimen/margin_page"
        android:text="@string/default_product_description"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/detail_product_page_product_title"
        app:layout_constraintTop_toBottomOf="@+id/detail_product_page_product_title" />

    <TextView
        android:id="@+id/detail_product_page_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textStyle="bold"
        android:text="@string/default_product_price"
        app:layout_constraintEnd_toEndOf="@+id/detail_product_page_product_desc"
        app:layout_constraintStart_toStartOf="@+id/detail_product_page_product_desc"
        app:layout_constraintTop_toBottomOf="@+id/detail_product_page_product_desc" />

    <TextView
        android:id="@+id/detail_product_page_product_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_product_currency"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_product_page_product_price"
        app:layout_constraintTop_toTopOf="@+id/detail_product_page_product_price" />


    <View
        android:id="@+id/view"
        android:layout_width="4dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/detail_product_page_btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_page"
        android:layout_marginBottom="@dimen/default_margin_page"
        android:text="@string/btn_retour"
        style="@style/BlackBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/detail_product_page_btn_availabilitty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_availability"
        style="@style/BlackBtn"
        app:layout_constraintBottom_toBottomOf="@+id/detail_product_page_btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/detail_product_page_btn_back" />


</androidx.constraintlayout.widget.ConstraintLayout>