<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginStart="@dimen/default_margin_page"
        android:layout_marginTop="@dimen/default_margin_page"
        android:layout_marginEnd="@dimen/default_margin_page"
        android:layout_marginBottom="@dimen/default_margin_page">


        <TextView
            android:id="@+id/profil_page_dialog_modify_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/form_modify_password_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/profil_page_dialog_modify_password_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form_enter_modify_password"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profil_page_dialog_modify_password_title" />


        <EditText
            android:id="@+id/profil_page_dialog_modify_password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_page"
            android:inputType="textWebPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profil_page_dialog_modify_password_subtitle" />

        <ImageButton
            android:id="@+id/profil_page_dialog_modify_password_btn_visibility"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_eye_24"
            app:layout_constraintBottom_toBottomOf="@+id/profil_page_dialog_modify_password_input"
            app:layout_constraintEnd_toEndOf="@+id/profil_page_dialog_modify_password_input"
            app:layout_constraintTop_toTopOf="@+id/profil_page_dialog_modify_password_input" />

        <Button
            android:id="@+id/profil_page_dialog_modify_password_btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_page"
            android:text="@string/btn_valider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/profil_page_dialog_modify_password_btn_close"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>